demo/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: k8s-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: frontend
        image: demo-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
